presentacion super heroes

--- a/nuevo/style.css
+++ b/nuevo/style.css
@@ -7,10 +7,12 @@ html {
 body {
   width: 800px;
   margin: 0 auto;
+  background-image: url("imagenes/ligue_of_justicia.jpg");
 }
 
 h1, h2 {
-  font-family: 'Faster One', cursive;
+  font-family: 'Oswald', sans-serif;
+  color: rgb(255, 255, 255);
 }
 
 /* header styles */
@@ -20,10 +22,14 @@ h1 {
   text-align: center;
 }
 
+
+
 header p {
+  font-family: 'Playfair Display', serif;
   font-size: 1.3rem;
   font-weight: bold;
   text-align: center;
+  color: aliceblue;
 }
 
 /* section styles */
@@ -34,14 +40,19 @@ section article {
 }
 
 section p {
+  font-family: 'Sedgwick Ave Display', cursive;
   margin: 5px 0;
+  color: aqua;
 }
 
 section ul {
+  font-family: 'Dongle', sans-serif;
   margin-top: 0;
+  color: bisque;
 }
 
 h2 {
+  font-family: 'Roboto Mono', monospace;
   font-size: 2.5rem;
   letter-spacing: -5px;
   margin-bottom: 10px;
